tests/compile/userdata_field_async.stderr
error: async field function is not supported
 --> tests/compile/userdata_field_async.rs:9:5
  |
9 |     async fn description() -> Result<String> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mlua::Result`
 --> tests/compile/userdata_field_async.rs:1:5
  |
1 | use mlua::Result;
  |     ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
